--- a/index.html
+++ b/index.html
@@ -41,9 +41,9 @@
         <img src="./assets/cat-pictuer.png" alt="Xi's profile picture" />
       </div>
       <div class="section__text">
-        <p class="section__text__p1">Hello, I'm xi jin</p>
+        <p class="section__text__p1">Hello, I'm</p>
         <h1 class="title">Xi Jin</h1>
-        <p class="section__text__p2">i am Developer</p>
+        <p class="section__text__p2">Frontend Developer</p>
         <div class="btn-container">
           <button
             class="btn btn-color-2"
