--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
     </nav>
     <section id="profile">
       <div class="section__pic-container">
-        <img src="./assets/cat-pictuer.png" alt="Xi's profile picture" />
+        <img src="./assets/cat-pictuer.png" alt= />
       </div>
       <div class="section__text">
         <p class="section__text__p1">Hello, I'm</p>
